<resources>
    <string name="app_name">BookStoreApplication</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="luu_mat_khau">Lưu mật khẩu</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="huy">Huỷ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mat_khau_hien_tai">Mật khẩu hiện tại</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="xac_nhan_mat_khau">Xác nhận mật khẩu</string>
    <string name="luu">Lưu</string>
    <string name="ma_phieu">Mã phiếu:</string>
    <string name="number">number</string>
    <string name="thanh_vien">Thành viên:</string>
    <string name="text">text</string>
    <string name="ten_sach">Tên sách:</string>
    <string name="tien_thue">Tiền thuê:</string>
    <string name="ngay_thue">Ngày thuê:</string>
    <string name="date">date</string>
    <string name="ma_phieu_muon">Mã phiếu mượn</string>
    <string name="ngay">Ngày:</string>
    <string name="da_tra_sach">Đã trả sách</string>
    <string name="sach">Sách:</string>
    <string name="so_luong">Số lượng:</string>
    <string name="tu_ngay">Từ ngày</string>
    <string name="nhap_ngay_bat_dau">Nhập ngày bắt đầu</string>
    <string name="den_ngay">Đến ngày</string>
    <string name="nhap_ngay_ket_thuc">Nhập ngày kết thúc</string>
    <string name="doanh_thu">Doanh thu</string>
    <string name="tong_doanh_thu">Doanh thu:</string>
    <string name="money">Money</string>
    <string name="welcome_administrator">Welcome administrator</string>
    <string name="quan_ly_phieu_muon">Quản lý Phiếu Mượn</string>
    <string name="quan_ly_loai_sach">Quản lý Loại Sách</string>
    <string name="quan_ly_sach">Quản lý Sách</string>
    <string name="quan_ly_thanh_vien">Quản lý Thành Viên</string>
    <string name="thong_ke">Thống kê</string>
    <string name="top_10_sach_muon_nhieu_nhat">Top 10 sách mượn nhiều nhất</string>
    <string name="nguoi_dung">Người dùng</string>
    <string name="them_nguoi_dung">Thêm người dùng</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="ma_loai">Mã loại:</string>
    <string name="ten_loai">Tên loại:</string>
    <string name="ma_loai_sach">Mã loại sách</string>
    <string name="ten_loai_sach">Tên loại sách</string>
    <string name="ma_sach">Mã sách:</string>
    <string name="gia_thue">Giá thuê:</string>
    <string name="loai_sach">Loại sách:</string>
    <string name="maSach">Mã Sách</string>
    <string name="tenSach">Tên Sách</string>
    <string name="giaThue">Giá thuê</string>
    <string name="ma_thanh_vien">Mã thành viên:</string>
    <string name="ten_thanh_vien">Tên thành viên:</string>
    <string name="nam_sinh">Năm sinh:</string>
    <string name="maThanhVien">Mã thành viên</string>
    <string name="tenThanhVien">Tên thành viên</string>
    <string name="namSinh">Năm sinh</string>
    <string name="title">Title</string>
    <string name="id">ID</string>
    <string name="them_thanh_vien">THÊM THÀNH VIÊN</string>
    <string name="them_sach">THÊM SÁCH</string>
    <string name="loaiSach">Loại sách</string>
    <string name="them_loai_sach">THÊM LOẠI SÁCH</string>
    <string name="them_phieu_muon">THÊM PHIẾU MƯỢN</string>
    <string name="thanhVien">Thành viên</string>
    <string name="cap_nhat_thanh_vien">CẬP NHẬT THÀNH VIÊN</string>
    <string name="cap_nhat_sach">CẬP NHẬT SÁCH</string>
    <string name="cap_nhat_phieu_muon">CẬP NHẬT PHIẾU MƯỢN</string>
    <string name="cap_nhat_loai_sach">CẬP NHẬT LOẠI SÁCH</string>
    <string name="trang_thai">Trạng thái:</string>
    <string name="todo">TODO</string>
    <string name="ma_thu_thu">Mã thủ thư:</string>
    <string name="ten_thu_thu">Tên thủ thư:</string>
    <string name="mat_khau_tt">Mật khẩu:</string>
    <string name="cap_nhat_thu_thu">CẬP NHẬT THỦ THƯ</string>
    <string name="maThuThu">Mã thủ thử</string>
    <string name="tenThuThu">Tên thủ thư</string>
    <string name="quan_ly_thu_thu">Quản lý Thủ Thư</string>
    <string name="s_l_t_m_n">Số lượt mượn:</string>
</resources>