<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:cardCornerRadius="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#009688"
            android:text="@string/cap_nhat_phieu_muon"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/ma_phieu_muon"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edMaPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ma_phieu_muon"
            android:layout_marginBottom="15dp"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/thanhVien"/>

        <Spinner
            android:id="@+id/spTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/tenSach"/>

        <Spinner
            android:id="@+id/spnSach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngay"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvNgay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tien_thue"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_tienThue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="18sp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/ckbTraSach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_tra_sach"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSavePM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_save"
                android:text="@string/luu"
                android:textSize="16sp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/border_style"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancelPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_cancle"
                android:text="@string/huy"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:background="@drawable/border_style"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>