<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tv_mp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sach"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_tenSach_tk"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_mp"
        android:text="@string/text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/tv_tenSach_tk"
        android:text="@string/so_luong"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_soLuong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_tv"
        android:text="@string/number"
        android:textSize="16sp"/>

</RelativeLayout>