<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="#FFFDFD">

    <TextView
        android:id="@+id/tv_mp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ma_phieu"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMaPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_mp"
        android:text="@string/number"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_mp"
        android:text="@string/thanh_vien"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTenTV"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMaPM"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_tv"
        android:text="@string/text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_tenSach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tv"
        android:text="@string/ten_sach"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTenSach_pm"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTenTV"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_tenSach"
        android:text="@string/text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tenSach"
        android:text="@string/tien_thue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTienThue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tenSach"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_tt"
        android:text="@string/number"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_npm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tt"
        android:text="@string/ngay_thue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNgayPM"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tt"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_npm"
        android:text="@string/date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_npm"
        android:text="@string/trang_thai"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_npm"
        android:layout_toEndOf="@+id/tv_status"
        android:text="@string/text"
        android:textColor="#E64C4C"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imgEditPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTenTV"
        android:layout_toStartOf="@+id/imgDeletePM"
        android:layout_marginEnd="5dp"
        android:background="#FFFFFF"
        android:src="@drawable/ic_edit"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/imgDeletePM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTenTV"
        android:layout_alignParentEnd="true"
        android:background="#FFFDFD"
        android:src="@drawable/ic_trash"
        tools:ignore="ContentDescription" />

</RelativeLayout>