<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tv_mtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ma_thanh_vien"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMaTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_mtv"
        android:text="@string/number"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_ttv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_mtv"
        android:text="@string/ten_thanh_vien"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTenThanhVien"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_mtv"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_ttv"
        android:text="@string/text"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_ns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ttv"
        android:text="@string/nam_sinh"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNamSinh"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTenThanhVien"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/tv_ns"
        android:text="@string/number"
        android:textSize="18sp"/>

    <ImageButton
        android:id="@+id/imgEditTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_mtv"
        android:layout_toStartOf="@+id/imgDeleteTV"
        android:layout_marginEnd="5dp"
        android:background="#FFFFFF"
        android:src="@drawable/ic_edit"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/imgDeleteTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_mtv"
        android:layout_alignParentEnd="true"
        android:background="#FFFFFF"
        android:src="@drawable/ic_trash"
        tools:ignore="ContentDescription" />

</RelativeLayout>