<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:cardCornerRadius="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#009688"
            android:text="@string/them_loai_sach"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/ma_loai_sach"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edMaLS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ma_loai_sach"
            android:layout_marginBottom="15dp"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/ten_loai_sach"/>

        <EditText
            android:id="@+id/edTenLS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ten_loai_sach"
            android:layout_marginBottom="15dp"
            tools:ignore="Autofill,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveLS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_save"
                android:text="@string/luu"
                android:textSize="16sp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/border_style"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancelLS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_cancle"
                android:text="@string/huy"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:background="@drawable/border_style"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>